--- a/debian/rules
+++ b/debian/rules
@@ -115,7 +115,7 @@ set-orig-snapshot:
 # builds a snapshot of the upstream branch after some plausibility checks
 get-orig-source:
 	! test -e ../icewm_$(ORIGVERSION).orig.tar.xz || (echo Target already exists ; exit 1)
-	lc=`git reflog icewm-1-4-BRANCH | head -n1 | cut -f1 -d" "` && echo "Expected upstream ref: $$lc" && grep -m1 ^commit ChangeLog | grep $$lc
+	lc=`git reflog icewm-1-4-BRANCH | head -n1 | cut -f1 -d" "` && echo "Expected upstream ref: $$lc (on failure run update-debian-mod target)" && grep -m1 ^commit ChangeLog | grep $$lc
 	git tag upstream/$(ORIGVERSION) icewm-1-4-BRANCH
 	git archive upstream/$(ORIGVERSION) --prefix icewm-$(ORIGVERSION)/ | xz -9 > ../icewm_$(ORIGVERSION).orig.tar.xz
 	test -d ../tarballs && ln ../icewm_$(ORIGVERSION).orig.tar.xz ../tarballs || true
@@ -123,5 +123,8 @@ get-orig-source:
 
 update-debian-mod:
 	grep debian .git/HEAD
-	oldstate=$$(head ChangeLog  | grep ^commit | head -1 | cut -f2 -d ' ') && git log $$oldstate..icewm-1-4-BRANCH --stat=76 -M -C |fmt -sct -w80 > ChangeLog
+	oldstate=$$(head ChangeLog | grep ^commit | head -1 | cut -f2 -d ' ') && git log $$oldstate..icewm-1-4-BRANCH --stat=76 -M -C |fmt -sct -w80 > ChangeLog.debian
+	mv ChangeLog ChangeLog.upstream
+	cat ChangeLog.debian ChangeLog.upstream > ChangeLog
+	rm ChangeLog.debian ChangeLog.upstream
 	git commit ChangeLog -m "Updating ChangeLog for a new Debian snapshot"
