--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/Code7R/icewm.git
 Package: icewm-common
 Architecture: any
 Conflicts: menu (<< 2.1.9-1)
-Replaces: icewm (<< 1.2.14), icewm-gnome-support (<< 1.3.8-3)
+Replaces: icewm (<< 1.2.14), icewm-gnome-support (<< 1.3.8-3), icewm-themes (<< 1.3.8-3)
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Recommends: menu, xscreensaver
 Description: wonderful Win95-OS/2-Motif-like window manager
